Bug 331726 - keyboard short cut for switch keyboard locale doesn't work on lock screen
Summary: keyboard short cut for switch keyboard locale doesn't work on lock screen
Status: RESOLVED FIXED
Alias: None
Product: ksmserver
Classification: Unmaintained
Component: lockscreen (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-04 10:17 UTC by Nikolay Golub
Modified: 2015-06-16 14:45 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikolay Golub 2014-03-04 10:17:43 UTC
When screen is locked it's impossible to switch layout via defined short cut, only by mouse clicking. 



Reproducible: Always

Steps to Reproduce:
1. Make sure you have several keyboard layouts
2. Make sure you have keyboard short cut for layout switch (I use Ctrl + Space)
3. Lock screen
4. Try to change layout via short cut
Actual Results:  
Nothing changes

Expected Results:  
Keyboard layout and layout indicator should change

It's minor bug by itself, but with https://bugs.kde.org/show_bug.cgi?id=331517 and https://bugs.kde.org/show_bug.cgi?id=260912 working with screen locker becomes a nightmare with hard reset computer.

For example if chosen Russian layout(https://bugs.kde.org/show_bug.cgi?id=260912), mouse is on taskbar and user press lock key(https://bugs.kde.org/show_bug.cgi?id=331517) and password is in english, then it's impossible to unlock computer! 
It's terrible, because as I think most of KDE users use a Linux and most of Linux users prefer keyboard as main input method. And when user experiences such bugs he won't use this desktop environment
Comment 1 Kirill Elagin 2014-04-21 15:27:11 UTC
I confirm this in 4.11.5.

I should also add that we're talking here about “Alternative shortcut” which is handled by KDE. Switching handled by X works as expected, so as a workaround I have X switching set to something I never use (e.g. Shift+Caps) and use it to switch layout on the lock screen.
Comment 2 Mathieu Jobin 2014-05-13 13:02:45 UTC
I believe this is quite major bug...
 
users have no other options than
- leaving their session behind and opening a new session (two sessions for one user is bad)
- holding on to power button, shutting computer badly
- waiting and asking a root admin to restart lightdm/kdm or X or computer

here's the scenario. we're running kde 4.13 under Kubuntu 14.04

my wife is Japanese, I installed kde-l10n-ja which magically set up ibus (thanks for that)
we've added the Japanese Anthy keyboard.

her keyboard input is often set to japanese... 
her session goes locked, she can't unlocked it with japanese keyboard

need an input switcher of some sort... keyboard shortcut might be enough for advance users, but in many case, people will want to have the little icon with the menu

thanks
Comment 3 Mathieu Jobin 2014-05-19 03:51:42 UTC
my wife found a work around... she can type her password with japanese and press F8 to turn it into single-byte ascii 

works
Comment 4 Martin Flöser 2015-02-10 12:06:39 UTC
Git commit b6c4e5aa53fa0391ccb302b886a5390615a280ad by Martin Gräßlin.
Committed on 10/02/2015 at 09:43.
Pushed by graesslin into branch 'master'.

[screenlocker] Support global shortcut for changing keyboard layout
FIXED-IN: 5.3.0
REVIEW: 122508

M  +2    -1    ksmserver/screenlocker/globalaccel.cpp

http://commits.kde.org/plasma-workspace/b6c4e5aa53fa0391ccb302b886a5390615a280ad
Comment 5 Mathieu Jobin 2015-06-16 14:45:59 UTC
Thanks for the patch.

when someone use a tool for asian languages.

such as SCIM, FCITX or IBUS 

is there anyway, switching keyboard layout for those could work on the screenlocker as well?

I wonder where the integration should happen?

- input system modules for the breeze sddm/screenlocker theme? 
- ingration of those system with KDE keyboard settings ? https://bugs.kde.org/show_bug.cgi?id=109845
- or something can be done in screenlocker?
- or something should be done by each of those IM to support screenlockers and such ?

thanks