[screenlocker] Support global shortcut for changing keyboard layout

BUG: 331726
FIXED-IN: 5.3.0
REVIEW: 122508